LATEST 
----------------------------------
- ili import: Konsistenzbedingungen (Constraints) mit Namen (#69)

UML-Editor 3.9.0 (2022-07-08) 
----------------------------------
- UI: make metaattributes editable (#50)
- OID AS cannot be modeled for classes (#53)
- BASKET OID AS cannot be modeled for topics (#55)
- ili export: pad date, time, datetime with zeros (#60)
- fix JRE 1.6 compatibility
- ili2c-5.2.7

UML-Editor 3.8.1 (2021-12-28) 
----------------------------------
- fix ilicheck: NullPointerException if MetaDataUseDef in model
- ili2c-5.2.5

UML-Editor 3.8.0 (2021-11-24) 
----------------------------------
- translationxml export: distinguish between CLASS and STRUCTURE
- translationxml export: sort elements according to scoped name, but ignore case (same as in MS-Excel)
- ModelDef: keep ordering of translations
- INTERLIS2Def dialog: keep ordering of translations
- ili export: fix missing BASKET OID AS
- ili import: fix missing BASKET OID AS
- ili export: fix missing version in TRANSLATION OF
- ili export: export multilingual model element references in the language of the imported model
- ili import: fix multilingual model element references
- ili import: fix multilingual enumeration elements
- ili import: Error on importing an OID type with kind URI (#51)
- ili import: map unknown ili2c types as syntax text without MANDATORY
- fix -Duser.language=fr doesn't work; don't change default Locale, removed language selection dialog (#52)
- FILE FORMAT: class IliImport (ili:IMPORTS) changed
- ili2c-5.2.4

UML-Editor 3.7.6 (2020-12-28) 
----------------------------------
- ili2c-5.1.5

UML-Editor 3.7.5 (2020-10-27) 
----------------------------------
- fixed Opening existing .uml files does not work (#43)
- ili2c-5.1.4

UML-Editor 3.7.4 (2020-09-29) 
----------------------------------
- avoid collapse of navigation tree on element removal (#31)
- avoid removal of class figure on move of class
- support drag and drop of attributes (#29)